# Sketch-algorithms

./: CMakeLists.txt  README.md  baseline_common.cpp  baseline_common.hpp  common.cpp  common.hpp  estimators.cpp  estimators.hpp  main.cpp  output_parser.py  presence_checkers.cpp  presence_checkers.hpp  presence_checkers_comparison.cpp  segment.cpp  segment.hpp  shard_data.cpp  shard_data.hpp
tests/: CMakeLists.txt  shard_data_test.cpp
